# fastapi-money-converter

./: README.md  hello.py  pyproject.toml
app/: main.py
app/conversions/: routers.py  schemas.py
app/conversions/actions/: async_convert_currency_action.py  get_async_list_of_currencies_and_call_covert_action.py  get_sync_list_of_currencies_and_call_covert_action.py  sync_convert_currency_action.py
